--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ quarkus.datasource.password=
 quarkus.hibernate-orm.database.generation=update
 quarkus.log.category."io.quarkus.hibernate-reactive".level=DEBUG
 
+quarkus.smallrye-openapi.path=/openapi
+quarkus.smallrye-openapi.title=My API
+quarkus.smallrye-openapi.version=1.0.0
+quarkus.smallrye-openapi.description=API Documentation
