--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,10 @@
 quarkus.http.port=9081
-
 quarkus.datasource.db-kind=mysql
-quarkus.datasource.reactive.url=mysql://localhost:3306/db_quarkus
+quarkus.datasource.reactive.url=mysql://localhost:3306/db_quarkus_icon
 quarkus.datasource.username=root
 quarkus.datasource.password=
-
 quarkus.hibernate-orm.database.generation=update
 quarkus.log.category."io.quarkus.hibernate-reactive".level=DEBUG
-
 quarkus.smallrye-openapi.path=/openapi
 quarkus.smallrye-openapi.title=My API
 quarkus.smallrye-openapi.version=1.0.0
